# Korn

./: .pre-commit-config.yaml  Makefile  pyproject.toml
Korn_fastapi_application/: .env.example  main.py
Korn_fastapi_application/alembic/: env.py
Korn_fastapi_application/api/api_v1/: __init__.py
Korn_fastapi_application/core/: config.py
Korn_fastapi_application/core/models/: __init__.py  access_token.py  db_helper.py  user.py
Korn_fastapi_application/core/models/types/: user_id_type.py
Korn_fastapi_application/models/: __init__.py  base.py
