[tool.poetry]
name = "korno"
version = "0.1.0"
description = ""
authors = ["Serhii <lerojserg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.6.1"
black = "^24.10.0"
orjson = "^3.10.11"
flake8 = "^7.1.1"
isort = "^5.13.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
